--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fast Learn</title>
+    <title>HiUni</title>
 
     <style>
       * {
@@ -17,8 +17,8 @@
         min-height: 100vh;
         display: grid;
         place-items: center;
-        background: #f8fcf8;
         font-family: Geneva, Helvetica, Verdana, sans-serif;
+        background: #f6f8fa;
       }
 
       section {
@@ -26,30 +26,30 @@
       }
 
       h1 {
-        font-size: 2.7rem;
+        font-size: 4rem;
         font-weight: bold;
-        color: #125530;
-      }
-
-      h1 span {
-        letter-spacing: 1px;
+        color: #1e293a;
       }
 
       p {
         display: inline-block;
-        color: #28c76f;
-        margin-top: 0.7rem;
-        background-color: #28c76f1f;
-        font-size: 1.1rem;
+        margin-top: 1rem;
+        color: #627186;
+        font-size: 1.3rem;
         padding: 6px 18px;
         border-radius: 50px;
+      }
+
+      span {
+        font-size: 1rem;
+        font-weight: 600;
       }
     </style>
   </head>
   <body>
     <section>
-      <h1><span>FastLearn</span> API</h1>
-      <p>Version: 1.0.0</p>
+      <h1>HiUni API</h1>
+      <p>version 1.0.0</p>
     </section>
   </body>
 </html>
