feat: add create product

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HiUni</title>
+    <title>Daniyo</title>
 
     <style>
       * {
@@ -48,7 +48,7 @@
   </head>
   <body>
     <section>
-      <h1>HiUni API</h1>
+      <h1>Daniyo API</h1>
       <p>version 1.0.0</p>
     </section>
   </body>
