feat: implement upload user avatar

--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -15,8 +15,9 @@
       body {
         min-width: 100%;
         min-height: 100vh;
-        display: grid;
+        display: flex;
         place-items: center;
+        justify-content: center;
         font-family: Geneva, Helvetica, Verdana, sans-serif;
         background: #f6f8fa;
       }
